<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/musculation"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/squarts_image"
        android:layout_width="376dp"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="43dp"
        android:src="@drawable/facebook_cover_photo_1" />

    <RelativeLayout
        android:id="@+id/status_container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/squarts_image"
        android:layout_marginTop="80dp"
        android:background="@drawable/status_container">

        <TextView
            android:id="@+id/description_text"
            style="@style/descText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="3sp"
            android:text="You have an active plan"
            android:textSize="18dp" />

        <RelativeLayout
            android:id="@+id/status_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_text">

            <TextView
                android:id="@+id/start_date_label"
                style="@style/descText"
                android:layout_width="105sp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="3sp"
                android:text="@string/start_date" />

            <TextView
                android:id="@+id/start_date_text"
                style="@style/descValueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/start_date_label"
                android:text="14 Oct 2014" />

            <TextView
                android:id="@+id/level_label"
                style="@style/descText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/start_date_label"
                android:layout_alignLeft="@+id/start_date_label"
                android:text="@string/level" />

            <TextView
                android:id="@+id/level_text"
                style="@style/descValueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/start_date_text"
                android:layout_alignLeft="@+id/start_date_text"
                android:layout_toRightOf="@+id/level_label"
                android:text="Easy" />

            <TextView
                android:id="@+id/last_workout_label"
                style="@style/descText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/level_label"
                android:layout_alignLeft="@+id/level_label"
                android:text="@string/last_workout" />

            <TextView
                android:id="@+id/last_workout_text"
                style="@style/descValueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/level_text"
                android:layout_alignLeft="@+id/start_date_text"
                android:layout_toRightOf="@+id/last_workout_label"
                android:text="Week 1/Day 1 (13,15,17,14,15,13)" />

            <TextView
                android:id="@+id/next_workout_label"
                style="@style/descText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/last_workout_text"
                android:layout_alignLeft="@+id/last_workout_label"
                android:layout_marginBottom="3sp"
                android:text="@string/next_workout" />

            <TextView
                android:id="@+id/next_workout_text"
                style="@style/descValueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/last_workout_text"
                android:layout_alignLeft="@+id/last_workout_text"
                android:layout_toRightOf="@+id/next_workout_label"
                android:text="Week 1/Day 2 (13,15,17,14,15,13)" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_container_layout"
        android:layout_marginTop="53dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/start_button"
            style="@style/homeButton"
            android:background="@drawable/maxresdefault"
            android:onClick="onStartClick"
            android:text="@string/start"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/continue_button"
            style="@style/homeButton"
            android:background="@drawable/maxresdefault"
            android:onClick="onContinueClick"
            android:text="@string/continue_text"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/start_new_button"
            style="@style/homeButton"
            android:background="@drawable/maxresdefault"
            android:onClick="onStartNewClick"
            android:text="@string/start_new_text"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/progress_button"
            style="@style/homeButton"
            android:background="@drawable/maxresdefault"
            android:onClick="onProgressClick"
            android:text="@string/my_progress"
            android:textColor="@color/common_signin_btn_dark_text_focused" />

        <Button
            android:id="@+id/instructions_button"
            style="@style/homeButton"
            android:background="@drawable/maxresdefault"
            android:onClick="onInstructionsClick"
            android:text="@string/instructions_text"
            android:textColor="@color/common_signin_btn_dark_text_focused" />

    </LinearLayout>
</RelativeLayout>
